<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/button"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:onClick="siguiente"
        android:text="@string/BotonSiguiente"
        android:textColorHighlight="#2296F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="249dp"
        android:layout_height="197dp"
        android:layout_marginTop="116dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/calculator_minimalistic_svgrepo_com" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="398dp"
        android:layout_height="54dp"
        android:layout_marginTop="48dp"
        android:text="@string/titulo_pantalla_inicio"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="392dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:text="@string/subtitulo_pantalla_inicio"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>